[APPDEV-3512] Fix text in QS buttons being visible
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@26087 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickshop/actions.css
+++ b/projects/Media/docroot/assets/css/quickshop/actions.css
@@ -19,7 +19,7 @@
 	height: 29px;
 	padding: 0;
 	text-align: left;
-	text-indent: 100%;
+	text-indent: -9999em;
 	white-space: nowrap;
 	overflow: hidden;
 	cursor: pointer;
